<resources>
    <string name="app_name">BD Helper</string>
    <string name="app_name_display">BD Helper</string>
    <string name="home">Home</string>
    <string name="rent">Rent</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">698562556443-d0ep7sl4amngio6oj3ou98poo4bdkded.apps.googleusercontent.com</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="continue_button">Continue</string>
    <string name="finish">Finish</string>
    <string name="search">Search your location</string>
    <string name="set_location_from_map">Set location from the map</string>
    <string name="select_your_location">Select your location</string>
    <string name="my_current_location">My current location</string>
    <string name="search_location">Search your location</string>
    <string name="confirm">Confirm</string>
    <string name="agent">Agent</string>
    <string name="owner">Owner</string>
    <string name="to_rent">Want to rent</string>
    <string name="cancel">Cancel</string>
    <string name="apply">OK</string>
    <string name="verification_notice">Submit a photo of your profile and NID to verify your account</string>
    <string name="pickup_location">Pickup location</string>
    <string name="delivery_location">Delivery location</string>
    <string name="service_description">Service description</string>
    <string name="pickup_date">Date of rent</string>
    <string name="pickup_time">When renting</string>
    <string name="city">City</string>
    <string name="loading_point_address">Loading point (address)</string>
    <string name="unloading_point_address">Unloading point (address)</string>
    <string name="select_location">Select location</string>
    <string name="area_wise">Area wise</string>
    <string name="map">Map</string>
    <string name="set_map">Set map</string>
    <string name="division">Division</string>
    <string name="address_book">Address book</string>
    <string name="select_metro">Select Metro</string>
    <string name="select_serial">Select Serial</string>
    <string name="select">Select</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="promotion">Promo</string>
    <string name="recommended">Recommend</string>
    <string name="category">Category</string>
    <string name="category_dot">Category: </string>
    <string name="road_transport">Road Transport</string>
    <string name="equipment">Equipment</string>
    <string name="home_office_shifting">Home Shifting</string>
    <string name="harvester">Harvester</string>
    <string name="rent_a_car">Rent A Car</string>
    <string name="skilled_labor">Skilled Labor</string>
    <string name="lo_bet">Lo bet</string>
    <string name="shop">Shop</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="truck">Truck</string>
    <string name="pickup">Pickup</string>
    <string name="trailer">Trailer</string>
    <string name="dump_truck">Dump Truck</string>
    <string name="coveredvan">Covered Van</string>
    <string name="freezervan">Freezer Van</string>
    <string name="charger_van">Charger van</string>
    <string name="car">Car</string>
    <string name="microbus">Microbus</string>
    <string name="ambulance">Ambulance</string>
    <string name="crane">Crane</string>
    <string name="tractor">Tractor</string>
    <string name="rice_transplanter">Rice Transplanter</string>
    <string name="excavator">Excavator</string>
    <string name="driver">Driver</string>
    <string name="mechanic">Mechanic</string>
    <string name="electrician">Electrician</string>
    <string name="stove_mechanic">Stove mechanic</string>
    <string name="plumber">Plumber</string>
    <string name="send">Send</string>
    <string name="help_need">Write me what you want to know</string>
    <string name="modelBid">Bid please</string>
    <string name="budget">Amount:</string>
    <string name="budget_amount">Your budget amount please</string>
    <string name="description_product">Description</string>
    <string name="pick_up_location">Where will your product load?</string>
    <string name="drop_location">Where will your product be unloaded?</string>
    <string name="select_date_and_time">Select date &amp; time</string>
    <string name="capacity">Capacity</string>
    <string name="details">Details</string>
    <string name="size">Size</string>
    <string name="size_and_capacity">Size and Capacity</string>
    <string name="size_and_trip">Size &amp; Trip:</string>
    <string name="category_and_trip">Category &amp; Trip:</string>
    <string name="type_and_trip">Type &amp; Trip:</string>
    <string name="duration_for_rent">Duration for rent ?</string>
    <string name="how_many_are_needed">How many are needed</string>
    <string name="duration">Duration</string>
    <string name="more_than_1_week">Want to rent more than 1 week?</string>
    <string name="person">person</string>
    <string name="area_location">Location</string>
    <string name="ton">ton</string>
    <string name="feet">feet</string>
    <string name="which_types">Which types</string>
    <string name="types">Types</string>
    <string name="size_dot">Size:</string>
    <string name="type_dot">Type: </string>
    <string name="work_type_dot">Work type: </string>
    <string name="work_area_dot">Work area: </string>
    <string name="which_type_dot"><i>Type: </i></string>
    <string name="product_type"><i>Product type: </i></string>
    <string name="duration_dot">Duration: </string>
    <string name="which_type_laborer_dot">For what work: </string>
    <string name="work_experience_dot">Work experience:</string>
    <string name="need_dot">Need:</string>
    <string name="working_type_and_experience">Experience &amp; Work</string>
    <string name="pay_now">Pay now</string>
    <string name="support_24_hours">Support team 24/7 hours</string>
    <string name="contact_us">Contact us</string>
    <string name="current_rent_post">Current rent</string>
    <string name="all_rent_post">All rent</string>
    <string name="you_have_no_ongoing_post">You have no ongoing posts!</string>
    <string name="you_didnot_any_post">You didn\'t any post!</string>
    <string name="no_one_bid_yet">No one bid yet</string>
    <string name="bid_warning_notice">⚠️ উল্লেখিত জমির পরিমাণ অনুযায়ী প্রতি একর হিসেবে আপনার বিডের মূল্য লিখুন। সিস্টেম স্বয়ংক্রিয়ভাবে মোট জমির জন্য মোট খরচ হিসাব করে দেখাবে।</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="have_queries">Any question?</string>
    <string name="we_are_here_24_7_only_to_serve_you_please_call_us_16434_or_chat_with_us_for_any_quires">We are here 24/7 just to serve you. Please call us 01789999303 or chat with us for any queries</string>
    <string name="lets_chat">Message</string>
    <string name="lets_talk">Let\'s Call</string>
    <string name="request_service">Request Service</string>
    <string name="save">Save</string>
    <string name="service">Service</string>
    <string name="settings">Settings</string>
    <string name="payment">Payment</string>
    <string name="discount">Discount</string>
    <string name="promo">Promo</string>
    <string name="permission">Permission</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="complain">Complain</string>
    <string name="accountInformation">Account</string>
    <string name="offer">Offer</string>
    <string name="legal">Legal</string>
    <string name="others">Others</string>
    <string name="language">ভাষা - Language</string>
    <string name="share">Share</string>
    <string name="logOut">Logout</string>
    <string name="theme">Theme</string>
    <string name="seven_seat">7 seat</string>
    <string name="eleven_seat">11 seat</string>
    <string name="date">Date</string>
    <string name="date_dote">Date:</string>
    <string name="date_require">Require date:</string>
    <string name="date_issue">Issue date: </string>
    <string name="how_many">how many</string>
    <string name="time">Time</string>
    <string name="total_price">Total Price</string>
    <string name="see_bid_rental">See Bid price</string>
    <string name="review">Review</string>
    <string name="post">Post:</string>
    <string name="or">Or</string>
    <string name="call_to_confirm">Call if needed</string>
    <string name="model_and_type">Model &amp; type:</string>
    <string name="rent_date">Date of rent:</string>
    <string name="this_post_has_been_canceled">This post has been canceled</string>
    <string name="return_dot">Return:</string>
    <string name="return_date">Return date *</string>
    <string name="return_time">Return time</string>
    <string name="location_name">Project location</string>
    <string name="bidding">Bidding</string>
    <string name="seven_feet_one_ton_open">7 feet 1 ton</string>
    <string name="eight_feet_one_ton_open">8 feet 1 ton</string>
    <string name="nine_feet_one_half_ton_open">9 feet 1.5 ton</string>
    <string name="ten_feet_one_half_ton_open">10 feet 1.5 ton</string>
    <string name="twelve_feet_two_ton_open">12 feet 2 ton</string>
    <string name="forteen_feet_three_half_ton_open">14 feet 3.5 ton</string>
    <string name="seven_feet_one_ton_covered">7 feet 1 ton</string>
    <string name="nine_feet_one_half_ton_covered">9 feet 1.5 ton</string>
    <string name="twelve_feet_two_ton_covered">12 feet 2 ton</string>
    <string name="forteen_feet_three_half_ton_covered">14 feet 3.5 ton</string>
    <string name="sixteen_feet_seven_half">16 feet 7.5 ton</string>
    <string name="eighteen_feet_fifteen_ton">18 feet 15 ton</string>
    <string name="twenty_feet_fifteen_ton">20 feet 15 ton</string>
    <string name="twenty_three_feet_fifteen_ton">23 feet 15 ton</string>
    <string name="twenty_three_feet_twenty_five_ton">23 feet 25 ton</string>
    <string name="twelve_feet">12 feet</string>
    <string name="forteen_feet">14 feet</string>
    <string name="sixteen_feet">16 feet</string>
    <string name="eighteen_feet">18 feet</string>
    <string name="twenty_feet">20 feet</string>
    <string name="twenty_four_feet">24 feet</string>
    <string name="twenty_six_feet">26 feet</string>
    <string name="fourty_feet">40 feet</string>
    <string name="onehundred_and_twentytwo">120 cft</string>
    <string name="registration">Registration</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_now">Log in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="district">District</string>
    <string name="submit">Submit</string>
    <string name="your_email">Your email</string>
    <string name="business_or_ocp_name">Business/Profession name</string>
    <string name="your_business_or_ocp_name">Your business / profession name</string>
    <string name="partner">Partner</string>
    <string name="rent_service">Rent Service</string>
    <string name="referral_code">Referral Code</string>
    <string name="no_payment_account">No payment account</string>
    <string name="payment_account_found">Your payment accounts</string>
    <string name="add_payment_account">Add payment account</string>
</resources>