<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/rentPost"
        android:enabled="true"
        android:icon="@drawable/ic_order"
        android:title="@string/rent"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/help"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>