<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_rent"
        android:enabled="true"
        android:icon="@drawable/ic_rent"
        android:title="@string/rent_service"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_help"
        android:enabled="true"
        android:icon="@drawable/ic_hearing"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>