<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        style="@style/fontStyle"
        tools:context=".partnerFragment.PaymentAccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            android:orientation="vertical"
            android:paddingHorizontal="2dp">

            <TextView
                android:id="@+id/paymentAccountNotFoundTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_payment_account"
                android:textColor="@color/text_secondary"
                android:textSize="22sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/paymentAccountFoundTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/payment_account_found"
                android:textColor="@color/text_secondary"
                android:textSize="16sp"
                android:visibility="gone" />

            <!--Demo-->
            <!--<include layout="@layout/row_payment_account" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/paymentAccountRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="25dp"
                android:clipToPadding="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_payment_account" />


        </LinearLayout>

        <!-- Add New Button -->
        <TextView
            android:id="@+id/addPaymentAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:padding="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_button_gradient"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/add_payment_account"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:drawablePadding="12dp"
            app:drawableStartCompat="@drawable/ic_add_plus"
            app:drawableTint="@color/white" />

    </RelativeLayout>
</layout>